# Metis

./: .gitignore  CONTRIBUTING.md  LICENSE  METIS.md  P0-NEXT.md  README.en.md  README.md  SECURITY.md  index.html  pyproject.toml  styles.css
backend/: .gitignore  LICENSE  README.md  __init__.py  __main__.py  backend_entry.py  pyproject.toml  requirements-build.txt  requirements.txt  test_e2e.py  test_phase61.py
backend/bridges/: README.md  __init__.py  event_contract.py  event_serializer.py  model_capability.py  provider_contract.py  provider_errors.py  provider_profiles.py  provider_registry.py  provider_user_config.py  session_contract.py  tool_contract.py  tool_profiles.py  tool_registry_adapter.py
backend/core/: __init__.py  constants.py  paths.py
backend/evals/: README.md  __init__.py  metrics.py  report.py  runner.py
backend/runtime/: action_audit.py  agent_loop.py  agent_services.py  build_runtime_pack.py  cancellation.py  checkpoint_store.py  checkpoints.py  cli.py  context_budget.py  context_control.py  context_eviction.py  desktop.py  document_converters.py  edit_guard.py  error_catalog.py  evidence_chain.py  expert_tools.py  extension_installer.py  hcs_client.py  hcs_poc.py  hcs_runtime.py  hook_lifecycle_bus.py  image_utils.py  isolated_runtime.py  loop_discipline.py  mcp_client.py  mini_agent.py  model_router.py  parallel_subagents.py  path_safety.py  permission_control.py  pip_helper.py  plugin_loader.py  provider_conformance.py  python_env.py  reasoning_tiers.py  result_compactor.py  rootfs_builder.py  runtime_job.py  runtime_manager.py  (+13 more)
(+567 files in other folders)
