[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "metis-backend"
version = "2.0.0"
description = "Metis personal AI agent with coding, desktop automation, and MCP"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0",
    "requests>=2.28",
    "Pillow>=9.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
desktop = [
    "pyautogui>=0.9",
    "pynput>=1.7",
    "pystray>=0.19.5",
    "pywebview>=5.0",
]
langgraph = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
]
browser = [
    "browser-use>=0.13",
    "playwright>=1.48",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.2",
    "langchain-google-genai>=2.0",
]
all = ["metis-backend[mcp,desktop,langgraph]"]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
metis = "backend.runtime.cli:main"
metis-backend = "backend.runtime.cli:main"

[tool.setuptools.packages.find]
where = [".."]
include = ["backend*"]
exclude = ["backend.tests*"]

[tool.ruff]
line-length = 120
extend-exclude = [
    "assets",
    "build",
    "metis_backend.egg-info",
    "others",
    "output",
    "packaging_blueprint",
    "var",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501", "W291", "W292", "W293"]
